--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     &nbsp;
     <div class="task-input">
-      <img src="/assets/burger.svg" alt="icon" height="20">
+      <img src="./assets/burger.svg" alt="icon" height="20">
       <input type="text" placeholder="Add a new task">
     </div>
     <div class="controls">
